# MessageQueuePy

CreateMqPy/: 002.bat  EmployeeClass.py  RabbitMQ_App.py  RabbitMQ_Manager.py  pyproject.toml
ReadMqPy/: 002.bat  ActiveMQ_Tester.py  Config_Reader.py  Kafka_Tester.py  MQ_Tester.py  RabbitMQ_Tester.py  Report_Generator.py  SmokeTestApp.py  pyproject.toml  queues.ini  report_20240628_215258.html
